<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QuizardQuest</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="username">Username</string>
	<string name="password">Password</string>
	<string name="login">Login: </string>
	<string name="welcomemessage">Are you ready to begin your Quest?</string>
	<string name="login_button">Begin</string>
	<string name="deck_string">Choose your Spellbook</string>
	<string name="deckname">Deck Name</string>
	<string name="start">Start</string>
	<string name="answer_hint">Enter Your Answer</string>
	<string name="submit">Submit</string>
	<string name="return_to_deck">Return to Spellbook Page</string>
</resources>
