<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/wizardbackground"
    tools:context=".MainActivity" >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:id="@+id/welcome_message"
    >
    
    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="#FF9900"
        android:text="@string/welcomemessage"/>
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:background="@drawable/backgrounddrawable"
    android:layout_below="@+id/welcome_message"
    android:id="@+id/login">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_text"
        android:text="@string/login"
         />
    
    <EditText android:id="@+id/enter_username"
    	android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/username" 
        android:textColorHint="#85000000"/>
    
    <EditText android:id="@+id/enter_password"
        android:inputType="textPassword"
    	android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/password"
        android:textColorHint="#85000000" />


</LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:id="@+id/login_button"
        android:layout_height="wrap_content"
        android:text="@string/login_button" 
        android:layout_below="@+id/login"
        android:onClick="login"/>
</RelativeLayout>
